# velgi

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: blocks.kra  models.blend  models.glb
src/: assets.rs  enemy.rs  level.rs  main.rs  physics_layers.rs  player.rs  spike_roller.rs
src/level/: patterns.txt  tile.rs
