[package]
name = "velgi"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rand = "0.8.5"
starframe = { git = "https://github.com/m0lentum/starframe", rev = "6311420abe61ab5c7eac9bd813892ce5797753b9" }
# for dev:
# starframe = { path = "../starframe" }

[profile.dev]
opt-level = 2
